examples/valid/07_builtin_expected_type.lane
fn host_int() -> Int {
  builtin("%host_int")
}

let host_value : Int = builtin("%host_value")

