examples/invalid/14_builtin_without_expected_type.lane
// invalid: builtin requires a direct expected type
fn bad() -> Int {
  let x = builtin("%anything")
  x
}

